Minor Changes in index.html and styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,5 +35,7 @@ main {
     display: flex;
     flex-direction: column;
     margin-top: var(--navbar-height);
+    align-items: center;
+    width: 90%;
 }
 
