--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import './nav.css';
+@import './inicio.css';
 
 * {
     padding: 0;
@@ -7,6 +8,9 @@
 
 body {
     font-family: Inter;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -38,6 +42,4 @@ main {
     align-items: center;
     width: 90%;
 }
-
-
 
