--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -2,23 +2,23 @@
     --card-background: rgb(150,150,150);
 }
 
-.titulo-inicio {
+.main__inicio__titulo {
     display: flex;
     flex-direction: column;
     padding-top: 30px;
     align-items: center;
 }
 
-.titulo-inicio h1 {
+.main__inicio__titulo h1 {
     font-size: 3em;
 }
 
-.titulo-inicio h3 {
+.main__inicio__titulo h3 {
     margin-top: 25px;
     font-size: 1.5em;
 }
 
-.seccion-links {
+.main__inicio__links {
     margin-top: 100px;
     display: flex;
     flex-direction: row;
@@ -26,7 +26,7 @@
     width: 100%;
 }
 
-.card-links {
+.main__inicio__links__card {
     width: 30%;
     border: solid 1px rgb(200, 200, 200);
     border-radius: 5px;
@@ -40,7 +40,7 @@
     transition: box-shadow,color,background-color .3s ease-in-out;
 }
 
-.card-links:hover {
+.main__inicio__links__card:hover {
     cursor: pointer;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.351);
     color: rgb(220,220,220);
